Toned animations down further and changed colors a bit for better contrast. More work to do though

--- a/src/components/desktop/NavBar.module.css
+++ b/src/components/desktop/NavBar.module.css
@@ -138,7 +138,7 @@
 }
 
 .day-toggle {
-  color: #ffdd42;
+  color: #f48037;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
   margin-right: 2vw;
