--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -2,11 +2,12 @@
   position: sticky;
   top: 0;
   z-index: 9999;
-  line-height: 8vh;
-  height: 8vh;
+  line-height: 5rem;
+  height: 5rem;
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.5rem;
   transition: 0.8s;
+  background: #343a40;
 }
 
 .night-nav-bar ul {
@@ -17,7 +18,7 @@
 .night-nav-bar ul li {
   display: inline;
   box-sizing: border-box;
-  margin-left: 8vw;
+  margin-left: 5rem;
   transition: all 0.2s ease-in-out;
 }
 
@@ -60,11 +61,12 @@
   position: sticky;
   top: 0;
   z-index: 9999;
-  line-height: 8vh;
-  height: 8vh;
+  line-height: 5rem;
+  height: 5rem;
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.5rem;
   transition: 0.8s;
+  background: #f5f5f5;
 }
 
 .day-nav-bar ul {
@@ -75,7 +77,7 @@
 .day-nav-bar ul li {
   display: inline;
   box-sizing: border-box;
-  margin-left: 8vw;
+  margin-left: 5rem;
   transition: all 0.2s ease-in-out;
 }
 
@@ -90,11 +92,11 @@
 .day-nav-bar a:link {
   text-decoration: none;
   color: #30638e;
-  outline: none;
+  outline: underline;
 }
 
 .day-nav-bar a:visited {
-  text-decoration: none;
+  text-decoration: underline;
   color: #30638e;
 }
 
@@ -118,7 +120,7 @@
   color: #eee8aa;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  margin-right: 2vw;
+  margin-right: 2rem;
 }
 
 .night-toggle:hover {
@@ -141,7 +143,7 @@
   color: #f48037;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  margin-right: 2vw;
+  margin-right: 2rem;
 }
 
 .day-toggle:hover {
@@ -160,59 +162,92 @@
   color: #080808;
 }
 
-/* Don't judge my use of !important....*/
+@media only screen and (max-width: 1300px) {
+  .night-nav-bar {
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+    line-height: 3rem;
+    height: 3rem;
+    text-align: center;
+    font-size: 1rem;
+    transition: 0.8s;
+    background: #343a40;
+  }
 
-.selected {
-  text-decoration: underline !important;
-}
+  .night-nav-bar ul {
+    display: flex;
+    margin: 0;
+  }
 
-.night-scroll {
-  position: fixed;
-  bottom: 0px;
-  right: 50vw;
-  color: #30638e;
-  font-size: 3rem;
-  z-index: 9998;
-}
+  .night-nav-bar ul li {
+    display: inline;
+    box-sizing: border-box;
+    margin-left: 2rem;
+    transition: all 0.2s ease-in-out;
+  }
 
-.night-scroll:hover {
-  cursor: pointer;
-  color: #ffffff;
-}
+  .night-nav-bar ul li:last-child {
+    margin-left: auto;
+  }
 
-.night-scroll:active {
-  cursor: pointer;
-  color: #ffffff;
-}
+  .day-nav-bar {
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+    line-height: 3rem;
+    height: 3rem;
+    text-align: center;
+    font-size: 1rem;
+    transition: 0.8s;
+    background: #f5f5f5;
+  }
 
-.night-scroll:focus {
-  cursor: pointer;
-  color: #ffffff;
-}
+  .day-nav-bar ul {
+    display: flex;
+    margin: 0;
+  }
 
-.day-scroll {
-  position: fixed;
-  bottom: 0px;
-  right: 50vw;
-  color: #30638e;
-  font-size: 3rem;
-  z-index: 9998;
-}
+  .day-nav-bar ul li {
+    display: inline;
+    box-sizing: border-box;
+    margin-left: 2rem;
+    transition: all 0.2s ease-in-out;
+  }
 
-.day-scroll:hover {
-  cursor: pointer;
-  color: #080808;
-}
+  .day-nav-bar ul li:last-child {
+    margin-left: auto;
+  }
 
-.day-scroll:active {
-  cursor: pointer;
-  color: #080808;
-}
+  .day-nav-bar a:hover {
+    text-decoration: underline;
+    color: #080808;
+    transform: scale(1.1);
+  }
 
-.day-scroll:focus {
-  cursor: pointer;
-  color: #080808;
-}
-.invisible {
-  opacity: 0;
+  .night-toggle {
+    color: #eee8aa;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    margin-right: 2rem;
+  }
+
+  .night-toggle:hover {
+    text-decoration: none;
+    color: #ffffff;
+    transform: scale(1.1);
+  }
+
+  .day-toggle {
+    color: #f48037;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    margin-right: 2rem;
+  }
+
+  .day-toggle:hover {
+    text-decoration: none;
+    color: #080808;
+    transform: scale(1.1);
+  }
 }
