--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -32,13 +32,13 @@
 
 .night-nav-bar a:link {
   text-decoration: none;
-  color: #30638e;
+  color: #008aff;
   outline: none;
 }
 
 .night-nav-bar a:visited {
   text-decoration: none;
-  color: #30638e;
+  color: #008aff;
 }
 
 .night-nav-bar a:hover {
