--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -100,13 +100,13 @@
 
 .night-projects a:link {
   text-decoration: none;
-  color: #30638e;
+  color: #008aff;
   outline: none;
 }
 
 .night-projects a:visited {
   text-decoration: none;
-  color: #30638e;
+  color: #008aff;
 }
 
 .night-projects a:hover {
