--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -157,7 +157,7 @@
   width: 40rem;
   height: 30rem;
   border-radius: 1%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 @media only screen and (max-width: 1300px) {
