--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -1,3 +1,13 @@
+$night-primary-text: #ffffff;
+$night-secondary-text: #c0c0c0;
+$night-link: #008aff;
+$night-background: #343a40;
+
+$day-primary-text: #080808;
+$day-secondary-text: #696969;
+$day-link: #30638e;
+$day-background: #f5f5f5;
+
 .night-nav-bar {
   position: sticky;
   top: 0;
@@ -7,7 +17,7 @@
   text-align: center;
   font-size: 1.5rem;
   transition: 0.8s;
-  background: #343a40;
+  background: $night-background;
 }
 
 .night-nav-bar ul {
@@ -32,29 +42,29 @@
 
 .night-nav-bar a:link {
   text-decoration: none;
-  color: #008aff;
+  color: $night-link;
   outline: none;
 }
 
 .night-nav-bar a:visited {
   text-decoration: none;
-  color: #008aff;
+  color: $night-link;
 }
 
 .night-nav-bar a:hover {
   text-decoration: underline;
-  color: #ffffff;
+  color: $night-primary-text;
   transform: scale(1.1);
 }
 
 .night-nav-bar a:focus {
   text-decoration: underline;
-  color: #ffffff;
+  color: $night-primary-text;
 }
 
 .night-nav-bar a:active {
   text-decoration: underline;
-  color: #ffffff;
+  color: $night-primary-text;
 }
 
 .day-nav-bar {
@@ -66,7 +76,7 @@
   text-align: center;
   font-size: 1.5rem;
   transition: 0.8s;
-  background: #f5f5f5;
+  background: $day-background;
 }
 
 .day-nav-bar ul {
@@ -91,29 +101,29 @@
 
 .day-nav-bar a:link {
   text-decoration: none;
-  color: #30638e;
+  color: $day-link;
   outline: underline;
 }
 
 .day-nav-bar a:visited {
   text-decoration: underline;
-  color: #30638e;
+  color: $day-link;
 }
 
 .day-nav-bar a:hover {
   text-decoration: underline;
-  color: #080808;
+  color: $day-primary-text;
   transform: scale(1.1);
 }
 
 .day-nav-bar a:focus {
   text-decoration: underline;
-  color: #080808;
+  color: $day-primary-text;
 }
 
 .day-nav-bar a:active {
   text-decoration: underline;
-  color: #080808;
+  color: $day-primary-text;
 }
 
 .night-toggle {
@@ -125,18 +135,18 @@
 
 .night-toggle:hover {
   text-decoration: none;
-  color: #ffffff;
+  color: $night-primary-text;
   transform: scale(1.1);
 }
 
 .night-toggle:active {
   text-decoration: none;
-  color: #ffffff;
+  color: $night-primary-text;
 }
 
 .night-toggle:focus {
   text-decoration: none;
-  color: #ffffff;
+  color: $night-primary-text;
 }
 
 .day-toggle {
@@ -148,47 +158,29 @@
 
 .day-toggle:hover {
   text-decoration: none;
-  color: #080808;
+  color: $day-primary-text;
   transform: scale(1.1);
 }
 
 .day-toggle:active {
   text-decoration: none;
-  color: #080808;
+  color: $day-primary-text;
 }
 
 .day-toggle:focus {
   text-decoration: none;
-  color: #080808;
+  color: $day-primary-text;
 }
 
 @media only screen and (max-width: 1300px) {
   .night-nav-bar {
-    position: sticky;
-    top: 0;
-    z-index: 9999;
     line-height: 3rem;
     height: 3rem;
-    text-align: center;
     font-size: 1rem;
-    transition: 0.8s;
-    background: #343a40;
-  }
-
-  .night-nav-bar ul {
-    display: flex;
-    margin: 0;
   }
 
   .night-nav-bar ul li {
-    display: inline;
-    box-sizing: border-box;
     margin-left: 2rem;
-    transition: all 0.2s ease-in-out;
-  }
-
-  .night-nav-bar ul li:last-child {
-    margin-left: auto;
   }
 
   .day-nav-bar {
@@ -200,54 +192,17 @@
     text-align: center;
     font-size: 1rem;
     transition: 0.8s;
-    background: #f5f5f5;
-  }
-
-  .day-nav-bar ul {
-    display: flex;
-    margin: 0;
   }
 
   .day-nav-bar ul li {
-    display: inline;
-    box-sizing: border-box;
     margin-left: 2rem;
-    transition: all 0.2s ease-in-out;
-  }
-
-  .day-nav-bar ul li:last-child {
-    margin-left: auto;
-  }
-
-  .day-nav-bar a:hover {
-    text-decoration: underline;
-    color: #080808;
-    transform: scale(1.1);
   }
 
   .night-toggle {
-    color: #eee8aa;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
     margin-right: 2rem;
-  }
-
-  .night-toggle:hover {
-    text-decoration: none;
-    color: #ffffff;
-    transform: scale(1.1);
   }
 
   .day-toggle {
-    color: #f48037;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
     margin-right: 2rem;
-  }
-
-  .day-toggle:hover {
-    text-decoration: none;
-    color: #080808;
-    transform: scale(1.1);
   }
 }
