Fixed mobile profile picture

--- a/src/components/About.module.scss
+++ b/src/components/About.module.scss
@@ -203,14 +203,7 @@ $day-background: #f5f5f5;
     line-height: 2.5rem;
   }
 
-  .night-image {
-    width: 12rem;
-    height: 9rem;
-    margin: 1rem auto 2rem auto;
-    padding: 7.5px 7.5px 20px;
-  }
-
-  .day-image {
+  .profile {
     width: 12rem;
     height: 9rem;
     margin: 1rem auto 2rem auto;
