--- a/src/App.scss
+++ b/src/App.scss
@@ -2,23 +2,30 @@
 
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 nav {
   font-family: "Rubik";
 }
 
 .App {
-  height: 100%;
+  height: 50%;
 }
 
 body {
   font-family: "Roboto";
   max-width: 3000px;
-  margin: auto;
-  background: grey;
+  height: 1px;
+  margin: 0;
+  padding: 0;
 }
 
 html {
   scroll-behavior: smooth;
+  height: 50%;
 }
 
 button {
