--- a/src/components/About.module.scss
+++ b/src/components/About.module.scss
@@ -16,8 +16,9 @@ $day-background: #f5f5f5;
   grid-template-columns: 2fr 1fr;
   padding-top: 5rem;
   margin-top: -5rem;
-  height: 100vh;
+  min-height: 100vh;
   text-align: justify;
+  overflow: overlay;
 }
 
 .day-about {
@@ -28,8 +29,9 @@ $day-background: #f5f5f5;
   grid-template-columns: 2fr 1fr;
   padding-top: 5rem;
   margin-top: -5rem;
-  height: 100vh;
+  min-height: 100vh;
   text-align: justify;
+  overflow: overlay;
 }
 
 .about-text {
