Removed janky projects and updated site a bit

--- a/src/components/About.module.scss
+++ b/src/components/About.module.scss
@@ -16,6 +16,7 @@ $day-background: #f5f5f5;
   grid-template-columns: 2fr 1fr;
   padding-top: 5rem;
   margin-top: -5rem;
+  height: auto;
   min-height: 100vh;
   text-align: justify;
   overflow: overlay;
@@ -29,6 +30,7 @@ $day-background: #f5f5f5;
   grid-template-columns: 2fr 1fr;
   padding-top: 5rem;
   margin-top: -5rem;
+  height: auto;
   min-height: 100vh;
   text-align: justify;
   overflow: overlay;
